--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,119 +1,94 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
 
 .nav {
-    width: 100%;
-    height: 65px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
-    background: transparent;
-    transition: all 0.4s ease;
-    z-index: 1000;
-}
-
-.nav.affix {
-    background-color: #111;
-    padding: 5px 0;
-}
-
-.nav .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 0 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #23232e;
+    height: 8vh;
 }
 
-.nav .logo a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 2.5rem;
+main {
+    background: url("../images/Background.jpg") no-repeat center center;
+    background-size: cover;
+    height: 92vh;
 }
 
-.nav .logo a:hover {
-    color: #00E676;
-}
-
-.nav .main_list {
-    display: flex;
-}
-
-.nav .navlinks {
-    display: flex;
+.nav-list {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    display: flex;
 }
 
-.nav .navlinks li {
-    padding: 0 20px;
+.nav-list li {
+    letter-spacing: 3px;
+    margin-left: 32px;
 }
 
-.nav .navlinks li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.6rem;
-    transition: 0.3s;
-}
-
-.nav .navlinks li a:hover {
-    color: #00E676;
-}
-
-/* Menu responsivo */
-.navTrigger {
+.mobile-menu {
     display: none;
     cursor: pointer;
-    width: 30px;
-    height: 25px;
 }
 
-.navTrigger i {
-    background-color: #fff;
-    display: block;
-    width: 100%;
-    height: 4px;
-    margin: 5px 0;
-    transition: all 0.4s ease;
+.mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    transition: all 0.3s ease;
 }
 
-.navTrigger.active i:nth-child(1) {
-    transform: translateY(9px) rotate(135deg);
+@media (max-width: 999px) {
+    body {
+        overflow-x: hidden;
+    }
+    
+    .nav-list {
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 40vw;
+        height: 92vh;
+        background: #23232e;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+    .nav-list li {
+        margin-left: 0;
+        opacity: 0;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
 }
 
-.navTrigger.active i:nth-child(2) {
+.nav-list.active {
+    transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.mobile-menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.mobile-menu.active .line2{
     opacity: 0;
 }
 
-.navTrigger.active i:nth-child(3) {
-    transform: translateY(-9px) rotate(-135deg);
-}
-
-@media screen and (max-width: 768px) {
-    .nav .main_list {
-        display: none;
-        width: 100%;
-        position: absolute;
-        top: 65px;
-        left: 0;
-        background-color: #111;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav .main_list.show_list {
-        display: flex;
-    }
-
-    .nav .navlinks {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .nav .navlinks li {
-        padding: 15px 0;
-    }
-
-    .navTrigger {
-        display: block;
-    }
+.mobile-menu.active .line3{
+    transform: rotate(45deg) translate(-5px, -7px);
 }
